objects/NDA_ARM_Cadence_Authorized_Employees__c.object
<CustomObject>
    <description>Object to hold the authorized employees for ARM</description>
    <fields>
        <fullName>Access_End_Date__c</fullName>
        <label>Access Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Approval_Status__c</fullName>
        <formula>TEXT(Related_Agreement__r.Apttus_Approval__Approval_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Category__c</fullName>
        <formula>TEXT(Related_Agreement__r.Apttus__Status_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <formula>Text(Related_Agreement__r.Apttus__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_On__c</fullName>
        <label>Deleted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Flow_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set true when a record is saved from ARM_Access_End_Flow page and is reset from trigger.</description>
        <label>End Flow Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Flow_URL__c</fullName>
        <formula>$Label.RVP_Notification_Forecast_URL + &apos;/apex/ARM_Access_End_Flow?Id=&apos; +  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Flow URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Control_Flag__c</fullName>
        <formula>Related_Agreement__r.Is_Export_Control_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export Control Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Access_Date__c</fullName>
        <label>Last Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Never_Accessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Accessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Applied__c</fullName>
        <formula>&quot;Employee is restricted from working in specific areas of Cadence’s business due to employee’s access of ARM data. You may follow the Document Link to view details related to this restriction.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Applied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_End_Date__c</fullName>
        <formula>if(Never_Accessed__c,NULL,(if(ISNULL(Last_Access_Date__c), Access_End_Date__c+365, Last_Access_Date__c+365)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_ProjectID__c</fullName>
        <label>Ref_ARM_Restriction_ProjectID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_ProjectName__c</fullName>
        <label>Ref_ARM_Restriction_ProjectName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Reason__c</fullName>
        <formula>if (Never_Accessed__c,&quot;Never_Accessed&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Start_Date__c</fullName>
        <formula>if (Never_Accessed__c, NULL, if(ISNULL(Related_Agreement__r.Apttus__Activated_Date__c),DATEVALUE(Related_Agreement__r.LastModifiedDate),Related_Agreement__r.Apttus__Activated_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Status__c</fullName>
        <formula>if(Never_Accessed__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_URLLink__c</fullName>
        <formula>$Label.RVP_Notification_Forecast_URL + &apos;/apex/Agreement_Detail?id=&apos; + Related_Agreement__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_URLLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refrigeration_End_Date__c</fullName>
        <formula>IF( Never_Accessed__c = true  , null ,  
IF( NOT(ISBLANK(Last_Access_Date__c )),  Last_Access_Date__c + 365 , 
IF( NOT(ISBLANK(Access_End_Date__c )),  Access_End_Date__c + 365 ,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refrigeration End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>NDA ARM Cadence Authorized Employees</relationshipLabel>
        <relationshipName>NDA_ARM_Cadence_Authorized_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Show the Status as Active if Never Accessed is false else show Inactive</description>
        <formula>IF( Never_Accessed__c , &quot;Inactive&quot;, &quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Access_Date__c</fullName>
        <formula>HYPERLINK( End_Flow_URL__c , &apos;Update Access Date&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Access Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NDA_ARM_Cadence_Authorized_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTemp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check if the record is a temporary record. Value set true from trigger. Used in workflows to check if the workflow needs to be executed.</description>
        <label>isTemp</label>
        <type>Checkbox</type>
    </fields>
    <label>NDA ARM Cadence Authorized Employees</label>
    <nameField>
        <displayFormat>Employee - {0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDA ARM Cadence Authorized Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>